...
    locations: ['US'],
    plaidInstitutionId: 'ins_127287',
    popularRanks: {'US': 3},
  ),
  _SeedInstitution(
    slug: 'citi',
    name: 'Citi',
    website: 'citi.com',
    locations: ['US'],
    plaidInstitutionId: 'ins_10',
    popularRanks: {'US': 4},
  ),
  _SeedInstitution(
    slug: 'capital-one',
    name: 'Capital One',
    website: 'capitalone.com',
    locations: ['US'],
    plaidInstitutionId: 'ins_128026',
    popularRanks: {'US': 5},
  ),
  _SeedInstitution(
...
